Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16199

Unable to run/debug localy with Generic Linux Device

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.0.0
    • Qt Creator 4.0.0
    • Remote Linux
    • None
    • ArchLinux x86_64, Qt 5.6
    • c813b5f31cde78fd40f5284202820eb759a7cfe2

      The buttons "Run" and "Start Debugging" are grayed out and not clickable when a project is configured to use remote linux kit and the run configuration is set to local.

      The buttons are not active either when a "Custom executable" run configuration is added.

      If "on Remote Device" configuration is selected, the buttons become enabled.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            4og Andrey Babanin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes